--- a/operational.tex
+++ b/operational.tex
@@ -195,10 +195,9 @@ proposition shows.
   P_{n-1}\choice_{k_{n-1}} P_{n}))\quad
   \mbox{where}\ k_{l}=\frac{p_{l}}{1-\sum_{j=1}^{l-1}p_{j}}
 \end{displaymath}
-Then there is $1\leq i\leq n$, $\fA\in\calF$, $q\in (0,1]$, and
-$P'\in\fodaPA$
-such that
-$P_{i}\tranp{\fA}{q}P'$, iff $P\tranp{\fA}{p_{i}\cdot q}P'$.
+For all $1\leq i\leq n$, $\fA\in\calF$, $q\in (0,1]$, and
+$P'\in\fodaPA$,
+$P_{i}\tranp{\fA}{q}P'$ iff $P\tranp{\fA}{p_{i}\cdot q}P'$.
 \begin{proof}
   The proof is in the Appendix~\ref{app:proofs}.
 \end{proof}
