--- a/syntax.tex
+++ b/syntax.tex
@@ -121,7 +121,7 @@ conjunction, intuitively it combines the products of both subterms
   \(\{\fA,\fC\}\) with probability \(\frac{4}{15}\),
   \(\{\fA,\fC,\fD\}\) with probability \(\frac{1}{15}\),
   \(\{\fB,\fC\}\) with probability \(\frac{8}{15}\), and
-  \(\{\fA,\fC,\fD\}\) with probability \(\frac{2}{15}\).
+  \(\{\fB,\fC,\fD\}\) with probability \(\frac{2}{15}\).
 
 \end{example}
 
