--- a/equivalence.tex
+++ b/equivalence.tex
@@ -22,7 +22,7 @@ better in any moment.
     \end{array}$$
     \begin{proof}
       The full proof of this Proposition is in
-      Appendix~\ref{app:proofs}. Each equality above
+      Appendix~\ref{proof:DenoOpe}. Each equality above
       is proved in a different Lemma:
       \begin{enumerate*}[label=(\arabic{enumi})]
       \item is consequence of Lemma~\ref{lem:pref},
