--- a/ex_operational.tex
+++ b/ex_operational.tex
@@ -205,7 +205,7 @@
 
 
         \path
-        (A) edge[->] node[right, opacity=0, text opacity=1]
+        (A) edge[->] node[above, opacity=0, text opacity=1]
         {$\feature{A},\frac{1}{2}$}
         (B);
 
@@ -218,7 +218,7 @@
         {$\feature{C},\frac{1}{4}$}
         (D);
         \path
-        (C) edge[->] node[right, opacity=0, text opacity=1]
+        (C) edge[->] node[above, opacity=0, text opacity=1]
         {$\feature{A},\frac{1}{2}$}
         (C1);
         \path
