--- a/main.tex
+++ b/main.tex
@@ -52,7 +52,7 @@
   Dipartimento di Informatica - Scienza e Ingegneria, Università di Bologna, Italy /\\
   FOCUS team, INRIA, France\\
   \email{carlos.camacho@ucm.es, llana@ucm.es, alberto.nunez@pdi.ucm.es, mario.bravetti@unibo.it\\
-   Draft: \timestamp
+   %Draft: \timestamp
   }
 }
 
