--- a/related_work.tex
+++ b/related_work.tex
@@ -79,7 +79,7 @@ Some of these approaches describe models to run statistical analysis over \SPLs,
 %
 
 Other works focus on describing use cases for analyzing the probability of finding features inside valid products~\cite{dpcslsh17}.
-It is true that variability models computing can create combinatory problems
+It is true that variability models computing can create combinatorial problems
 depending on how the models are computed and how the models are represented, which is directly
 correlated to the information to be generated~\cite{dpcslsh17}.
 This analysis makes the process of studying product lines a complex computational  task.
@@ -97,13 +97,13 @@ calculate the probability of a specific feature.
 %
 %
 There are proposals that allow the introduction of probabilities in
-feature models. For instance \cite{Dubslaff2015} uses Markow Decision
-processes to represent the behavior of products, whereas in
+feature models. For instance \cite{Dubslaff2015} uses Markov decision
+process to represent the behavior of products, whereas in
 \cite{vk13}, the behavior of the system is represented by Markov Chain.
 The variability on those formalisms is modeled existing tools like FODA or
 just propositional logic to describe their products.
 On the contrary, our
-contributions focuses on defining a probabilistic language to describe
+contributions focus on defining a probabilistic language to describe
 the products. We use the probabilities to quantify how relevant is a
 product of a feature within the product line.
 
@@ -163,7 +163,7 @@ can be processed in the practice without much algorithmic sophistication or
 complex analysis.
 In particular, the study of expending machines
 has been widely used across the whole
-literature to show practical and real usages of products
+literature to show practical and real usages of product
 line modeling~\cite{jhfes12}. Moreover, it is described that those models for defining products
 lines does not always apply to the
 formal definition and description of software
