--- a/concuPL.bib
+++ b/concuPL.bib
@@ -7,6 +7,121 @@
 
 %% Saved with string encoding Unicode (UTF-8)
 
+
+%MARIO
+
+@article{Bravetti18,
+  author    = {Mario Bravetti},
+  title     = {Reduction semantics in Markovian process algebra},
+  journal   = {J. Log. Algebr. Meth. Program.},
+  volume    = {96},
+  pages     = {41--64},
+  year      = {2018},
+}
+%  url       = {https://doi.org/10.1016/j.jlamp.2018.01.002},
+%  doi       = {10.1016/j.jlamp.2018.01.002},
+
+@article{BravettiCZ18,
+  author    = {Mario Bravetti and
+               Marco Carbone and
+               Gianluigi Zavattaro},
+  title     = {On the boundary between decidability and undecidability of asynchronous
+               session subtyping},
+  journal   = {Theor. Comput. Sci.},
+  volume    = {722},
+  pages     = {19--51},
+  year      = {2018},
+}
+%  url       = {https://doi.org/10.1016/j.tcs.2018.02.010},
+%  doi       = {10.1016/j.tcs.2018.02.010},
+
+@article{BoerBLZ18,
+  author    = {Frank S. de Boer and
+               Mario Bravetti and
+               Matias David Lee and
+               Gianluigi Zavattaro},
+  title     = {A Petri Net Based Modeling of Active Objects and Futures},
+  journal   = {Fundam. Inform.},
+  volume    = {159},
+  number    = {3},
+  pages     = {197--256},
+  year      = {2018},
+}
+%  url       = {https://doi.org/10.3233/FI-2018-1663},
+%  doi       = {10.3233/FI-2018-1663},
+
+@article{BravettiCZ17,
+  author    = {Mario Bravetti and
+               Marco Carbone and
+               Gianluigi Zavattaro},
+  title     = {Undecidability of asynchronous session subtyping},
+  journal   = {Inf. Comput.},
+  volume    = {256},
+  pages     = {300--320},
+  year      = {2017},
+}
+%  url       = {https://doi.org/10.1016/j.ic.2017.07.010},
+%  doi       = {10.1016/j.ic.2017.07.010},
+
+@article{AnconaEtAl16,
+  author    = {Davide Ancona and
+               Viviana Bono and
+               Mario Bravetti and
+               Joana Campos and
+               Giuseppe Castagna and
+               Pierre{-}Malo Deni{\'{e}}lou and
+               Simon J. Gay and
+               Nils Gesbert and
+               Elena Giachino and
+               Raymond Hu and
+               Einar Broch Johnsen and
+               Francisco Martins and
+               Viviana Mascardi and
+               Fabrizio Montesi and
+               Rumyana Neykova and
+               Nicholas Ng and
+               Luca Padovani and
+               Vasco T. Vasconcelos and
+               Nobuko Yoshida},
+  title     = {Behavioral Types in Programming Languages},
+  journal   = {Foundations and Trends in Programming Languages},
+  volume    = {3},
+  number    = {2-3},
+  pages     = {95--230},
+  year      = {2016},
+}
+%  url       = {https://doi.org/10.1561/2500000031},
+%  doi       = {10.1561/2500000031},
+
+@article{BravettiZ09,
+  author    = {Mario Bravetti and
+               Gianluigi Zavattaro},
+  title     = {On the expressive power of process interruption and compensation},
+  journal   = {Mathematical Structures in Computer Science},
+  volume    = {19},
+  number    = {3},
+  pages     = {565--599},
+  year      = {2009},
+}
+%  url       = {https://doi.org/10.1017/S0960129509007683},
+%  doi       = {10.1017/S0960129509007683},
+
+@article{BaetenB08,
+  author    = {Jos C. M. Baeten and
+               Mario Bravetti},
+  title     = {A ground-complete axiomatisation of finite-state processes in a generic
+               process algebra},
+  journal   = {Mathematical Structures in Computer Science},
+  volume    = {18},
+  number    = {6},
+  pages     = {1057--1089},
+  year      = {2008},
+}
+%  url       = {https://doi.org/10.1017/S0960129508007111},
+%  doi       = {10.1017/S0960129508007111},
+
+
+
 %% Esta cita habrá que arreglarla cuando salga la publicación
 
 @inproceedings{sac2015,
