--- a/introduction.tex
+++ b/introduction.tex
@@ -20,7 +20,8 @@ Graphical approaches are commonly used to model \SPLs. Feature Oriented Domain A
 % \FODA\ diagrams are built.
 Although this kind of solutions is useful to easily model \SPLs, a formal approach is needed for automatizing the analysis process and detecting errors in the early stages of the production process. It is therefore required that graphical representations are translated into mathematical entities~\cite{nak10}. In this case, the original graphical representation of \FODA\ must be provided with a formal semantics~\cite{bhst04}.
 %
-This  issue is solved by using \fodaPA~\cite{acl13}, a formal framework to represent \FODA\ diagrams using process algebras. \fodaPA\ can be applied not only to \FODA, but also to represent other feature-related problems and variability models. Additionally, some of the existing formal approaches use algebras and semantics~\cite{szw05,kkm06,prb11,acl13}, while others use either propositional or first order logic~\cite{man02,ka07,abgf10,atfg10,nnz14}.
+This  issue is solved by using \fodaPA~\cite{acl13}, a formal framework to represent \FODA\ diagrams using process algebras~\cite{BaetenB08}.
+\fodaPA\ can be applied not only to \FODA, but also to represent other feature-related problems and variability models. Additionally, some of the existing formal approaches use algebras and semantics~\cite{szw05,kkm06,prb11,acl13}, while others use either propositional or first order logic~\cite{man02,ka07,abgf10,atfg10,nnz14}.
 
 \begin{figure}[t]
 
