--- a/related_work.tex
+++ b/related_work.tex
@@ -7,7 +7,7 @@ back to the end of the 1980s. This is already a well established area,
 with many extensive contributions to include probabilistic information
 in classical formalisms (I/O Automata, Finite State Machines,
 (co-)algebraic approaches, among
-others)~\cite{hm09,aprs11,sok11,hn12,dghm14,agl16,Dubslaff2015}.
+others)~\cite{hm09,aprs11,sok11,hn12,dghm14,agl16,Dubslaff2015,Bravetti18}.
 %others)~\cite{ls91,rgs95,cdsy99,nun03,lnr06,csv07,dp07,dghm08,hm09,aprs11,sok11,hn12,dghm14,agl16,Dubslaff2015}.
 %
 %
