--- a/conclussions.tex
+++ b/conclussions.tex
@@ -45,7 +45,7 @@ we plan to find practical use cases to show the usefulness of having a probabili
 Also it is interesting the future integration's of our formal framework to existing tooling frameworks
 like ProFeat~\cite{Chrszon2018} and probabilistic model checkers like PRISM~\cite{mgd12}.
 Finally, a significant line of research could be the integration of research on \SPL\ with work 
-deadlock avoidance/analysis~\cite{BravettiCZ18, BoerBLZ18, BravettiCZ17, AnconaEtAl16, BravettiZ09}, so to 
+deadlock avoidance/analysis~\cite{BravettiCZ18, BoerBLZ18, BravettiCZ17, AnconaEtAl16, BravettiZ09, BravettiLZ08}, so to 
 scale the analysis from single systems to entire software families.
 
 %%% Local Variables:
