--- a/concuPL.bib
+++ b/concuPL.bib
@@ -120,7 +120,24 @@
 %  url       = {https://doi.org/10.1017/S0960129508007111},
 %  doi       = {10.1017/S0960129508007111},
 
-
+@inproceedings{BravettiLZ08,
+  author    = {Mario Bravetti and
+               Ivan Lanese and
+               Gianluigi Zavattaro},
+  title     = {Contract-Driven Implementation of Choreographies},
+  booktitle = {Trustworthy Global Computing, 4th International Symposium, {TGC} 2008,
+               Barcelona, Spain, November 3-4, 2008, Revised Selected Papers},
+  pages     = {1--18},
+  editor    = {Christos Kaklamanis and
+               Flemming Nielson},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {5474},
+  publisher = {Springer},
+  year      = {2009},
+  isbn      = {978-3-642-00944-0},
+}
+%  url       = {https://doi.org/10.1007/978-3-642-00945-7\_1},
+%  doi       = {10.1007/978-3-642-00945-7\_1},
 
 %% Esta cita habrá que arreglarla cuando salga la publicación
 
